fixed button text alignment, implemented public_friends setting

--- a/project_source_code/src/resources/css/settings.css
+++ b/project_source_code/src/resources/css/settings.css
@@ -70,6 +70,8 @@
     width: 70dvw;
     background-color: var(--color-primary);
     text-align: center;
+    display: flex;
+    align-items: center;
 }
 
 .dropdown-button:hover {
